--- a/index.html
+++ b/index.html
@@ -8,11 +8,19 @@
 <body>
     <h1>hello world</h1>
 
+    <!-- Modal Structure -->
+    <div id="userModal" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border: 1px solid #ccc; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); z-index: 1000;">
+        <p id="modalMessage"></p>
+        <button id="copyButton">Copy UserID</button>
+        <button onclick="closeModal()">Close</button>
+    </div>
+    <div id="modalOverlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 999;" onclick="closeModal()"></div>
+
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
     <script>
     async function initLIFF() {
         try {
-            await liff.init({ liffId: '2006578501-GpdpMJEN' }); // ❗ เปลี่ยนเป็น LIFF ID ที่แท้จริง
+            await liff.init({ liffId: '2006578501-GpdpMJEN' }); 
 
             if (!liff.isLoggedIn()) {
                 liff.login();
@@ -23,11 +31,40 @@
             const userId = profile.userId;
             const displayName = profile.displayName;
 
-            alert(`Hello ${displayName}\nUserID: ${userId}`);
+            showModal(`Hello ${displayName}<br>UserID: ${userId}`, userId);
         } catch (err) {
             console.error('LIFF Error:', err);
-            alert('เกิดข้อผิดพลาดใน LIFF: ' + err.message);
+            showModal('เกิดข้อผิดพลาดใน LIFF: ' + err.message);
         }
+    }
+
+    function showModal(message, userId = '') {
+        const modal = document.getElementById('userModal');
+        const overlay = document.getElementById('modalOverlay');
+        const modalMessage = document.getElementById('modalMessage');
+        const copyButton = document.getElementById('copyButton');
+
+        modalMessage.innerHTML = message;
+        modal.style.display = 'block';
+        overlay.style.display = 'block';
+
+        if (userId) {
+            copyButton.style.display = 'inline-block';
+            copyButton.onclick = () => {
+                navigator.clipboard.writeText(userId).then(() => {
+                    alert('UserID copied to clipboard!');
+                }).catch(err => {
+                    console.error('Failed to copy UserID:', err);
+                });
+            };
+        } else {
+            copyButton.style.display = 'none';
+        }
+    }
+
+    function closeModal() {
+        document.getElementById('userModal').style.display = 'none';
+        document.getElementById('modalOverlay').style.display = 'none';
     }
 
     initLIFF();
