--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LIFF Example</title>
+    <meta name="description" content="LIFF Connect Messaging API Application">
+    <meta name="author" content="Jakkrit Jack">
+    <link rel="icon" href="https://cdn.jsdelivr.net/gh/JacketJK/image/JK-Store_Logo.png" type="image/png">
+    <title>LIFF Connect Messaging API</title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <img src="https://cdn.jsdelivr.net/gh/JacketJK/upload/RETROWAVE-OASIS-33331.png" alt="Logo" style="width: 100vw; height: 100vh;">
 
     <!-- Modal Structure -->
     <div id="userModal" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background: white; padding: 20px; border: 1px solid #ccc; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); z-index: 1000;">
