--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta name="author" content="Jakkrit Jack">
     <link rel="icon" href="https://cdn.jsdelivr.net/gh/JacketJK/image/JK-Store_Logo.png" type="image/png">
     <title>LIFF Connect Messaging API</title>
+
+    <style>
+        body {
+            overflow: hidden;
+        }
+    </style>
 </head>
 <body>
     <img src="https://cdn.jsdelivr.net/gh/JacketJK/upload/RETROWAVE-OASIS-33331.png" alt="Logo" style="width: 100vw; height: 100vh;">
