--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         body {
             margin: 0;
             background-image: url('https://cdn.jsdelivr.net/gh/JacketJK/upload/RETROWAVE-OASIS-33331.png');
+            background-size: cover; 
+            background-position: center; 
+            background-repeat: no-repeat; 
         }
     </style>
 </head>
