--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
         body {
             margin: 0;
             background-image: url('https://cdn.jsdelivr.net/gh/JacketJK/upload/RETROWAVE-OASIS-33331.png');
-            background-size: cover; 
-            background-position: center; 
+            background-size: contain; 
+            background-position: center;
             background-repeat: no-repeat; 
+            height: 100vh; 
         }
     </style>
 </head>
