--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             background-position: center;
             background-repeat: no-repeat; 
             height: 100vh; 
+            width: 100vw;
+            display: flex;
         }
     </style>
 </head>
