--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         body {
             margin: 0;
             background-image: url('https://cdn.jsdelivr.net/gh/JacketJK/upload/RETROWAVE-OASIS-33331.png');
-            background-size: contain; 
+            background-size: cover; 
             background-position: center;
             background-repeat: no-repeat; 
             height: 100vh; 
